--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cmake.sourceDirectory": "/nfs/homes/mdias/Formação - Fase 1/Fractol/lib/MLX42"
+	"cmake.sourceDirectory": "/nfs/homes/mdias/Formação - Fase 1/Fractol/.lib/MLX42"
 }
